# quad_controller

./: README.md  log.md
cerbrus_interface/: CMakeLists.txt  cerbrus_interface_plugins.xml  package.xml
cerbrus_interface/include/cerbrus_interface/: CerberusVilo.h
cerbrus_interface/src/: CerberusVilo.cpp
legged_controllers/: CMakeLists.txt  package.xml
legged_controllers/config/: controllers.yaml  joy.yaml
legged_controllers/data/: contactstate.csv  referenceTime.csv
legged_controllers/launch/: load_controller.launch
legged_controllers/src/: DummyNavigator.cpp  LeggedController.cpp  TargetTrajectoriesPublisher.cpp
legged_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  OptiTrackEstimate.cpp  StateEstimateBase.cpp
legged_examples/legged_unitree/legged_unitree_description/: CMakeLists.txt  package.xml
legged_examples/legged_unitree/legged_unitree_description/launch/: bigtable.world  challenge1.world  empty_world.launch  hospital_world.launch  stair4.world  stair417.world  stair418.world  stair423.world  table_world.launch  turtle_world.launch
legged_examples/legged_unitree/legged_unitree_description/models/agriculture/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/cobblestones_1/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/cobblestones_2/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/cobblestones_2/mesh/: cobblestones.dae
legged_examples/legged_unitree/legged_unitree_description/models/cobblestones_3/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/complex_stairs_1/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/complex_stairs_1/mesh/: stairs.dae
legged_examples/legged_unitree/legged_unitree_description/models/complex_stairs_2/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/complex_stairs_2/mesh/: stairs_mirrored.dae
legged_examples/legged_unitree/legged_unitree_description/models/inspection/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/office/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/orchard/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/pallet_benchmark/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/pipe/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/ramp_05/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/ramp_10/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/ramp_15/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/ramp_30/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/ramp_45/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/ramp_45/mesh/: ramp_45.dae
legged_examples/legged_unitree/legged_unitree_description/models/rough_terrain/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/rough_terrain/mesh/: terrain.dae
legged_examples/legged_unitree/legged_unitree_description/models/ruins/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/ruins/mesh/: ruins.dae
legged_examples/legged_unitree/legged_unitree_description/models/stairs/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/models/step_pallets/: model.config  model.sdf
legged_examples/legged_unitree/legged_unitree_description/plugin/: draw_force_plugin.cc  foot_contact_plugin.cc
legged_examples/legged_unitree/legged_unitree_description/rviz/: config1.rviz  config2.rviz
legged_examples/legged_unitree/legged_unitree_description/urdf/: a1.urdf  a1_new.urdf  robot.xacro  robot_new.xacro
legged_examples/legged_unitree/legged_unitree_description/urdf/a1/: const.xacro
legged_examples/legged_unitree/legged_unitree_description/urdf/common/: gazebo.xacro  imu.xacro  leg.xacro
legged_examples/legged_unitree/legged_unitree_description/world/: agriculture.world  cobble.world  empty.world  empty_fast.world  empty_high_accuracy.world  empty_high_friction.world  inspection.world  maze.world  office.world  orchard.world  postoffice.world  pyramid.world  ramp.world  ramps.world  rough_terrain.world  ruins.world  stair01.world  stair4.world  stairs.world  stepping_stones.world
legged_gazebo/src/: LeggedHWSim.cpp
legged_hw/src/: LeggedHW.cpp  LeggedHWLoop.cpp
legged_interface/: CMakeLists.txt  package.xml
legged_interface/include/legged_interface/: LeggedInterface.h  LeggedRobotPreComputation.h  SwitchedModelReferenceManager.h
legged_interface/include/legged_interface/constraint/: EndEffectorLinearConstraint.h  FootPlacementConstraint.h  FrictionConeConstraint.h  LeggedSelfCollisionConstraint.h  NormalVelocityConstraintCppAd.h
legged_interface/src/: LeggedInterface.cpp  LeggedRobotPreComputation.cpp  SwitchedModelReferenceManager.cpp
legged_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FootPlacementConstraint.cpp  FrictionConeConstraint.cpp  SwingTrajectoryPlanner.cpp  ZeroVelocityConstraintCppAd.cpp
legged_msgs/: CMakeLists.txt  package.xml
legged_msgs/msg/: leggedreference.msg  lowstate.msg
legged_stateserver/: CMakeLists.txt  legged_stateserver_plugins.xml  package.xml
legged_stateserver/include/legged_stateserver/: StateServer.h
legged_stateserver/src/: StateServer.cpp
legged_wbc/src/: WbcBase.cpp  WeightedWbc.cpp
reactive_gait/: CMakeLists.txt  package.xml
reactive_gait/include/: reactive_gait_node.h
reactive_gait/src/: reactive_gait_node.cpp
unitree_move_base/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  move_base.rviz
(+19 files in other folders)
