<?xml version="1.0"?>
<package format="2">
    <name>legged_stateserver</name>
    <version>0.0.0</version>
    <description>The legged_stateserver packages.</description>
    <maintainer email="111@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="111@gmail.com">Qiayuan Liao</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>legged_common</depend>
    <depend>controller_interface</depend>
    <depend>legged_msgs</depend>


    <exec_depend>controller_manager</exec_depend>

    <export>
        <controller_interface plugin="${prefix}/legged_stateserver_plugins.xml"/>
    </export>
</package>
