<?xml version="1.0"?>
<package format="2">
    <name>legged_unitree_description</name>
    <version>0.0.0</version>
    <description>Unitree robot description files</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>

    <!-- <buildtool_depend>catkin</buildtool_depend> -->
    <!-- <buildtool_depend>genmsg</buildtool_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>joint_state_controller</build_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>controller_manager</build_export_depend>
    <build_export_depend>joint_state_controller</build_export_depend>
    <build_export_depend>robot_state_publisher</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend> -->
    <!-- <depend>unitree_legged_msgs</depend> -->

</package>
